--- a/functions/views/includes/foot.pug
+++ b/functions/views/includes/foot.pug
@@ -34,10 +34,10 @@ footer.bg-scinfo
                     else
                         a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
                 li
-                    if site=="draftsCal"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
+                    if site=="cal"
+                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
         .col-md-auto
             ul.no-list
                 li
