--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -1,9 +1,16 @@
 extends layouts/main
 
+block lang 
+  - const LANG=setLang
+
 block missHead
-  meta(name='description' content="Aquí puedes encontrar todas las galletas de "+triLC+"del"+year+".")
-  link(rel='canonical' href=HOST+'/archivo/'+year+'/'+triLC +'/')
-  title Archivo #{year} #{triLC} - Science Cookies
+  if LANG=="es"
+    meta(name='description' content="Aquí puedes encontrar todas las galletas de "+triLC+" del "+year+".")
+    link(rel='canonical' href=HOST+'/archivo/'+year+'/'+triLC +'/')
+  else if LANG=="en"
+    meta(name='description' content="Here you can find all Cookies from "+triLC+" of "+year+".")
+    link(rel='canonical' href=HOST+'/archive/'+year+'/'+triLC +'/')
+  title #{Buttons[LANG]["arch"]} #{year} #{triLC} - Science Cookies
 
   - const site="archTri";
 
@@ -11,9 +18,9 @@ block content
   nav(aria-label='breadcrumb')
     ol.breadcrumb.mb-4
       li.breadcrumb-item(aria-current='page')
-        a(href='/archivo') Archivo
+        a(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
       li.breadcrumb-item(aria-current='page')
-        a(href='/archivo') #{year}
+        a(href='/'+NavLinks[LANG]["arch"]) #{year}
       li.breadcrumb-item.active(aria-current='page') #{tri}
   br
   each cooks, month in months
@@ -26,11 +33,24 @@ block content
           .media-body
             h5.mt-0 !{cook.title}
             p !{cook.descrip}
-            if(cook.dledit)
-              p.my-0 Actualizado: !{cook.ledit}
-            else
-              p.my-0 Publicado:  !{cook.pub}
-            p.mt-0 Autor(es): !{cook.authrs}
+            if LANG=="es"
+              if(cook.dledit)
+                p.my-0 Actualizado: !{cook.ledit}
+              else
+                p.my-0 Publicado:  !{cook.pub}
+              if cook.authors.length>1
+                p.mt-0= 'Autores:' + cook.authors
+              else
+                p.mt-0= 'Autor:' + cook.authors
+            else if LANG=="en"
+              if(cook.dledit)
+                p.my-0 Updated: !{cook.ledit}
+              else
+                p.my-0 Published:  !{cook.pub}
+              if cook.authors.length>1
+                p.mt-0= 'Authors:' + cook.authors
+              else
+                p.mt-0= 'Author:' + cook.authors
       .dropdown-divider.d-md-none
 
 
