--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -5,7 +5,10 @@ block lang
 
 block missHead
   meta(name='description' content= description)
-  link(rel='canonical' href=HOST+'/galletas/'+month+'/'+file+'/')
+  if LANG=="es"
+    link(rel='canonical' href=HOST+'/galletas/'+month+'/'+file+'/')
+  else if LANG=="en"
+    link(rel='canonical' href=HOST+'/cookies/'+month+'/'+file+'/')
   title #{title} - Science Cookies
   link(rel="stylesheet" href=HOST+"/styles/cookie.css")
 
