--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -44,7 +44,7 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                 .dropdown-menu.dropdown-menu-right.bg-dark.pl-1(aria-labelledby='usrDrpdwn')
                     a#btnPrfl.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["profile"]) #{Buttons[LANG]["profile"]}
                     a#btnPref.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["profile"]+'?tab=pref') #{Buttons[LANG]["prefs"]}
-                    a#btnDraft.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["drafs"]) #{Buttons[LANG]["drafts"]}
+                    a#btnDraft.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["drafts"]) #{Buttons[LANG]["drafts"]}
                     a#btnCals.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
                     .dropdown-divider.ml-1.mr-2
                     button#btnLgO.btn.btn-link.text-decoration-none.text-light.d-none #{Buttons[LANG]["logOut"]}
