--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -58,32 +58,32 @@
             "404": "404/",
             "index": "/",
             "arch": "archivo/",
-            "cal": "calendarioastronomico/",
-            "who": "quienessomos/",
+            "cal": "calendario-astronomico/",
+            "who": "quienes-somos/",
             "contact": "contacto/",
             "priv": "docs/privacidad/",
             "tos": "docs/tos/",
             "profile": "perfil/",
-            "viewProf": "verperfil/",
+            "viewProf": "ver-perfil/",
             "drafts": "drafts/",
             "draftsCal": "calendarios/",
             "edit": "editar/",
-            "editCal": "editarcalendario/"
+            "editCal": "editar-calendario/"
         },
         "en": {
             "404": "404/",
             "index": "/",
             "arch": "archive/",
-            "cal": "astronomiccalendar/",
-            "who": "whoarewe/",
+            "cal": "astronomic-calendar/",
+            "who": "who-are-we/",
             "contact": "contact/",
             "priv": "docs/privacy/",
             "tos": "docs/tos/",
             "profile": "profile/",
-            "viewProf": "viewprofile/",
+            "viewProf": "view-profile/",
             "drafts": "drafts/",
             "draftsCal": "calendarios/",
             "edit": "editar/",
-            "editCal": "editarcalendario/"
+            "editCal": "editar-calendario/"
         }
     }
