--- a/functions/views/includes/foot.pug
+++ b/functions/views/includes/foot.pug
@@ -34,7 +34,7 @@ footer.bg-scinfo
                     else
                         a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
                 li
-                    if site=="cal"
+                    if site=="allCalsY"
                         a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
                     else
                         a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
