--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -6,10 +6,10 @@ block lang
 block missHead
   if LANG=="es"
     meta(name='description' content="Aquí puedes encontrar todas las galletas de "+triLC+" del "+year+".")
-    link(rel='canonical' href=HOST+'/archivo/'+year+'/'+triLC +'/')
   else if LANG=="en"
     meta(name='description' content="Here you can find all Cookies from "+triLC+" of "+year+".")
-    link(rel='canonical' href=HOST+'/archive/'+year+'/'+triLC +'/')
+    
+  link(rel='canonical' href=HOST+'/'+NavLinks[LANG]["arch"]+year+'/'+sTri +'/')
   title #{Buttons[LANG]["arch"]} #{year} #{triLC} - Science Cookies
 
   - const site="archTri";
