--- a/src/includes/foot.pug
+++ b/src/includes/foot.pug
@@ -21,44 +21,44 @@
 footer.bg-scinfo
     .row.align-items-end
         .col-md-auto
-            img(src='/img/wlogoT.svg' width='70' height='70' alt='Science Cookies Logo')
+            img(src=HOST+'/img/wlogoT.svg' width='70' height='70' alt='Science Cookies Logo')
             ul.no-list
                 li
                     if site=="index"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/') #{Buttons[LANG]["index"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/') #{Buttons[LANG]["index"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/') #{Buttons[LANG]["index"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/') #{Buttons[LANG]["index"]}
                 li
                     if site=="arch"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
                 li
                     if site=="allCalsY"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
         .col-md-auto
             ul.no-list
                 li
                     if site=="who"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                 li
                     if site=="contact"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
         .col-md-auto
             ul.no-list
                 li
                     if site=="priv"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["priv"]) #{Buttons[LANG]["priv"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["priv"]) #{Buttons[LANG]["priv"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["priv"]) #{Buttons[LANG]["priv"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["priv"]) #{Buttons[LANG]["priv"]}
                 li
                     if site=="tos"
-                        a.text-decoration-none.text-black.mx-2.my-1(href='/'+NavLinks[LANG]["tos"]) #{Buttons[LANG]["tos"]}
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["tos"]) #{Buttons[LANG]["tos"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href='/'+NavLinks[LANG]["tos"]) #{Buttons[LANG]["tos"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["tos"]) #{Buttons[LANG]["tos"]}
