--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -1,23 +1,23 @@
 //- Navbar
 nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
-    img.d-inline-block.align-center.mr-2(src='/img/wlogoT.svg' width='30' height='30' alt='Science Cookies Logo')
-    a.navbar-brand(href='/') Science Cookies
+    img.d-inline-block.align-center.mr-2(src=HOST+'/img/wlogoT.svg' width='30' height='30' alt='Science Cookies Logo')
+    a.navbar-brand(href=HOST+'/') Science Cookies
     button.navbar-toggler(type='button' data-toggle='collapse' data-target='#navbarM' aria-controls='navbarM' aria-expanded='false' aria-label='Toggle navigation')
         span.navbar-toggler-icon
     #navbarM.collapse.navbar-collapse
         ul.navbar-nav.mr-auto.py-0
             if site=="index"
-                a.btn.btn-dark.mx-2.my-1.active(href='/') #{Buttons[LANG]["index"]}
+                a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/') #{Buttons[LANG]["index"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href='/') #{Buttons[LANG]["index"]}
+                a.btn.btn-dark.mx-2.my-1(href=HOST+'/') #{Buttons[LANG]["index"]}
             if site=="arch"
-                a.btn.btn-dark.mx-2.my-1.active(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                a.btn.btn-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
             if site=="allCalsY"
-                a.btn.btn-dark.mx-2.my-1.active(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
+                a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
+                a.btn.btn-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
             .dropdown.d-flex.flex-column
                 if LANG=="es"
                     button.btn.btn-dark.mx-2.my-1.flex-fill#usBtnsDrpdwn(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Nosotros
@@ -26,14 +26,14 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                 .dropdown-menu.bg-sc.px-0.mb-2.py-1(aria-labelledby="usBtnsDrpdwn" style="min-width:max-content;")
                     .col-12.px-0.d-flex
                         if site=="who"
-                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
+                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href=HOST+'/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                         else
-                            a.btn.btn-dark.mx-2.my-1.flex-fill(href='/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
+                            a.btn.btn-dark.mx-2.my-1.flex-fill(href=HOST+'/'+NavLinks[LANG]["who"]) #{Buttons[LANG]["who"]}
                     .col-12.px-0.d-flex
                         if site=="contact"
-                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
+                            a.btn.btn-dark.mx-2.my-1.flex-fill.active(href=HOST+'/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
                         else
-                            a.btn.btn-dark.mx-2.my-1.flex-fill(href='/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
+                            a.btn.btn-dark.mx-2.my-1.flex-fill(href=HOST+'/'+NavLinks[LANG]["contact"]) #{Buttons[LANG]["contact"]}
             if site=="edit"||site=="editCal"
                 i.text-light.mx-3.my-auto#tagLstSave
         .row.justify-content-end
@@ -42,10 +42,10 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                     i#icnUsr.fas
                     img#picUsr.d-inline-block.align-center.ml-2.rounded-circle(src='' height='30' alt='')
                 .dropdown-menu.dropdown-menu-right.bg-dark.pl-1(aria-labelledby='usrDrpdwn')
-                    a#btnPrfl.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["profile"]) #{Buttons[LANG]["profile"]}
-                    a#btnPref.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["profile"]+'?tab=pref') #{Buttons[LANG]["prefs"]}
-                    a#btnDraft.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["drafts"]) #{Buttons[LANG]["drafts"]}
-                    a#btnCals.btn.btn-link.text-decoration-none.text-light.d-none(href='/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
+                    a#btnPrfl.btn.btn-link.text-decoration-none.text-light.d-none(href=HOST+'/'+NavLinks[LANG]["profile"]) #{Buttons[LANG]["profile"]}
+                    a#btnPref.btn.btn-link.text-decoration-none.text-light.d-none(href=HOST+'/'+NavLinks[LANG]["profile"]+'?tab=pref') #{Buttons[LANG]["prefs"]}
+                    a#btnDraft.btn.btn-link.text-decoration-none.text-light.d-none(href=HOST+'/'+NavLinks[LANG]["drafts"]) #{Buttons[LANG]["drafts"]}
+                    a#btnCals.btn.btn-link.text-decoration-none.text-light.d-none(href=HOST+'/'+NavLinks[LANG]["draftsCal"]) #{Buttons[LANG]["draftsCal"]}
                     .dropdown-divider.ml-1.mr-2
                     button#btnLgO.btn.btn-link.text-decoration-none.text-light.d-none #{Buttons[LANG]["logOut"]}
                     button#btnLgI.btn.btn-link.text-decoration-none.text-light.d-none(data-toggle='modal' data-target='#mdlRgstr') #{Buttons[LANG]["logIn"]}
