--- a/src/includes/sidebarL.pug
+++ b/src/includes/sidebarL.pug
@@ -27,6 +27,6 @@
             #popCook
         .col.justify-content-center.d-flex
             if LANG=="es" 
-                a.btn.btn-link-scckie.mt-md-2(href='/'+NavLinks[LANG]["arch"]) More
+                a.btn.btn-link-scckie.mt-md-2(href=HOST+'/'+NavLinks[LANG]["arch"]) More
             else if LANG=="en" 
-                a.btn.btn-link-scckie.mt-md-2(href='/'+NavLinks[LANG]["arch"]) Ver más 
+                a.btn.btn-link-scckie.mt-md-2(href=HOST+'/'+NavLinks[LANG]["arch"]) Ver más 
