--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -49,5 +49,5 @@ html(lang=LANG)
 
     include ../includes/bottom
 
-    script(src='/js/global.js')
+    script(src=HOST+'/js/global.js')
     block ownjs
