--- a/functions/views/allCalsM.pug
+++ b/functions/views/allCalsM.pug
@@ -9,7 +9,8 @@ block missHead
   else if LANG=="en"
     meta(name='description' content="Here you can find all the astronomic calendars from "+year+".")
 
-  link(rel='canonical' href=HOST+'/'+NavLinks[LANG]["cal"]+year+'/')
+  link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/')
+  link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cal"]+year+'/')
 
   title #{Buttons[LANG]["cal"]} #{year} - Science Cookies
 
