--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -8,8 +8,9 @@ block missHead
     meta(name='description' content="Aquí puedes encontrar todas las galletas de "+triLC+" del "+year+".")
   else if LANG=="en"
     meta(name='description' content="Here you can find all Cookies from "+triLC+" of "+year+".")
-    
-  link(rel='canonical' href=HOST+'/'+NavLinks[LANG]["arch"]+year+'/'+sTri +'/')
+
+  link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["arch"]+year+'/'+sTri +'/')
+  link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["arch"]+year+'/'+sTri +'/')
   title #{Buttons[LANG]["arch"]} #{year} #{triLC} - Science Cookies
 
   - const site="archTri";
