--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -12,6 +12,7 @@
             "404": "Página no encontrada",
             "index": "Inicio",
             "arch": "Archivo",
+            "cook": "Galletas",
             "cal": "Calendario Astronómico",
             "who": "¿Quienes somos?",
             "contact": "Contacto",
@@ -33,6 +34,7 @@
             "404": "Page not found",
             "index": "Home",
             "arch": "Archive",
+            "cook": "Cookies",
             "cal": "Astronomic Calendar",
             "who": "Who are we?",
             "contact": "Contact",
@@ -58,6 +60,7 @@
             "404": "404/",
             "index": "/",
             "arch": "archivo/",
+            "cook": "galletas/",
             "cal": "calendario-astronomico/",
             "who": "quienes-somos/",
             "contact": "contacto/",
@@ -74,6 +77,7 @@
             "404": "404/",
             "index": "/",
             "arch": "archive/",
+            "cook": "cookies/",
             "cal": "astronomic-calendar/",
             "who": "who-are-we/",
             "contact": "contact/",
