--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -9,7 +9,8 @@ html(lang=LANG)
     block missHead
 
     if site!="cookie" && site!="cal" && site!="allCalsM" && site!="allCalsY" && site!="arch" && site!="archTri" && site!="mailPrev"
-      link(rel='canonical' href=HOST+'/'+NavLinks[LANG][site])
+      link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"][site])
+      link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"][site])
 
       if site=="index"
         if LANG=="es" 
