--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -9,19 +9,19 @@ block missHead
   else if LANG=="en"
     meta(name='description' content="Here you can find all Cookies from "+triLC+" of "+year+".")
 
-  link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["arch"]+year+'/'+sTri +'/')
-  link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["arch"]+year+'/'+sTri +'/')
-  title #{Buttons[LANG]["arch"]} #{year} #{triLC} - Science Cookies
+  link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
+  link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+year+'/'+sTri +'/')
+  title #{Buttons[LANG]["cook"]} #{year} #{triLC} - Science Cookies
 
-  - const site="archTri";
+  - const site="cookTri";
 
 block content
   nav(aria-label='breadcrumb')
     ol.breadcrumb.mb-4
       li.breadcrumb-item(aria-current='page')
-        a(href='/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+        a(href='/'+NavLinks[LANG]["cook"]) #{Buttons[LANG]["cook"]}
       li.breadcrumb-item(aria-current='page')
-        a(href='/'+NavLinks[LANG]["arch"]) #{year}
+        a(href='/'+NavLinks[LANG]["cook"]) #{year}
       li.breadcrumb-item.active(aria-current='page') #{tri}
   br
   each cooks, month in months
