--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -9,32 +9,32 @@ block missHead
   else if LANG=="en"
     meta(name='description' content="Here you can find all our Cookies.")
 
-  link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["arch"])
-  link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["arch"])
-  title #{Buttons[LANG]["arch"]} - Science Cookies
+  link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"])
+  link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"])
+  title #{Buttons[LANG]["cook"]} - Science Cookies
 
-  - const site="arch";
+  - const site="cook";
 
 block content
   if LANG=="es"
-    h1.text-center Archivo de Science Cookies
+    h1.text-center Todas las Galletas de Science Cookies
     nav(aria-label='breadcrumb')
       ol.breadcrumb.mb-3
-        li.breadcrumb-item.active(aria-current='page') #{Buttons[LANG]["arch"]}
+        li.breadcrumb-item.active(aria-current='page') #{Buttons[LANG]["cook"]}
     .container-fluid.mb-2.rounded-lg.p-3.bg-rebecca
-      p Aquí puedes encontrar todas las galletas que tenemos.
+      p Aquí puedes encontrar todas las Galletas que tenemos.
       each tris, year in years 
         h2 !{year}
         ul 
           each ltri, tri in tris
             li 
-              a.btn-link-scckie.text-light(href="/" + NavLinks[LANG]["arch"] + year + "/" + tri + "/")
+              a.btn-link-scckie.text-light(href="/" + NavLinks[LANG]["cook"] + year + "/" + tri)
                 h6 !{ltri}
   else if LANG=="en"
-    h1.text-center Science Cookies Archive
+    h1.text-center All of Science Cookies' Cookies
     nav(aria-label='breadcrumb')
       ol.breadcrumb.mb-3
-        li.breadcrumb-item.active(aria-current='page') #{Buttons[LANG]["arch"]}
+        li.breadcrumb-item.active(aria-current='page') #{Buttons[LANG]["cook"]}
     .container-fluid.mb-2.rounded-lg.p-3.bg-rebecca
       p Here you can find all our Cookies.
       each tris, year in years 
@@ -42,6 +42,6 @@ block content
         ul 
           each ltri, tri in tris
             li 
-              a.btn-link-scckie.text-light(href="/" + NavLinks[LANG]["arch"] + year + "/" + tri + "/")
+              a.btn-link-scckie.text-light(href="/" + NavLinks[LANG]["cook"] + year + "/" + tri)
                 h6 !{ltri}
 
