--- a/src/includes/foot.pug
+++ b/src/includes/foot.pug
@@ -29,10 +29,10 @@ footer.bg-scinfo
                     else
                         a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/') #{Buttons[LANG]["index"]}
                 li
-                    if site=="arch"
-                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                    if site=="cook"
+                        a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cook"]) #{Buttons[LANG]["cook"]}
                     else
-                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                        a.text-decoration-none.text-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cook"]) #{Buttons[LANG]["cook"]}
                 li
                     if site=="allCalsY"
                         a.text-decoration-none.text-black.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
