--- a/src/includes/nav.pug
+++ b/src/includes/nav.pug
@@ -10,10 +10,10 @@ nav.navbar.sticky-top.navbar-expand-lg.navbar-dark.bg-sc
                 a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/') #{Buttons[LANG]["index"]}
             else
                 a.btn.btn-dark.mx-2.my-1(href=HOST+'/') #{Buttons[LANG]["index"]}
-            if site=="arch"
-                a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+            if site=="cook"
+                a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/'+NavLinks[LANG]["cook"]) #{Buttons[LANG]["cook"]}
             else
-                a.btn.btn-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["arch"]) #{Buttons[LANG]["arch"]}
+                a.btn.btn-dark.mx-2.my-1(href=HOST+'/'+NavLinks[LANG]["cook"]) #{Buttons[LANG]["cook"]}
             if site=="allCalsY"
                 a.btn.btn-dark.mx-2.my-1.active(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
             else
