--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -8,7 +8,7 @@ html(lang=LANG)
 
     block missHead
 
-    if site!="cookie" && site!="cal" && site!="allCalsM" && site!="allCalsY" && site!="arch" && site!="archTri" && site!="mailPrev"
+    if site!="cookie" && site!="cal" && site!="allCalsM" && site!="allCalsY" && site!="cook" && site!="cookTri" && site!="mailPrev"
       link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"][site])
       link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"][site])
 
