--- a/src/content/drafts.pug
+++ b/src/content/drafts.pug
@@ -106,4 +106,4 @@ block content
           span(aria-hidden='true') »
 
 block ownjs
-  script(src='/js/drafts.js')
+  script(src=HOST+'/js/drafts.js')
