--- a/src/content/edit.pug
+++ b/src/content/edit.pug
@@ -248,5 +248,5 @@ block content
         textarea#inJava.form-control(rows='8' readonly='')
 
 block ownjs
-  script(src='/js/edit.js')
+  script(src=HOST+'/js/edit.js')
   script#javaIns
