--- a/src/docs/privacidad.pug
+++ b/src/docs/privacidad.pug
@@ -54,7 +54,7 @@ block content
     li
       strong Sitio 
       | se refiere a Science Cookies, accesible desde 
-      a.text-warning(href='htpps://sciencecookies.net') https://sciencecookies.net.
+      a.text-warning(href=HOST) #{HOST}.
     li
       strong Usted
       |  se refiere a la persona que accede o utiliza el Servicio, o la compañía u otra entidad legal en nombre de la cual dicha persona accede o utiliza el Servicio, según corresponda.
