--- a/functions/views/allCalsM.pug
+++ b/functions/views/allCalsM.pug
@@ -20,7 +20,7 @@ block content
   nav(aria-label='breadcrumb')
     ol.breadcrumb.mb-4
       li.breadcrumb-item(aria-current='page')
-        a(href='/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
+        a(href=HOST+'/'+NavLinks[LANG]["cal"]) #{Buttons[LANG]["cal"]}
       li.breadcrumb-item.active(aria-current='page') #{year}
   br
   each month in months
