--- a/functions/views/allCalsY.pug
+++ b/functions/views/allCalsY.pug
@@ -28,4 +28,4 @@ block content
     ul
       each year in years
         li
-          a.btn-link-scckie.text-light(href='/'+NavLinks[LANG]["cal"]+year style='font-size:larger') #{year}
+          a.btn-link-scckie.text-light(href=HOST+'/'+NavLinks[LANG]["cal"]+year style='font-size:larger') #{year}
