--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -28,7 +28,7 @@ block content
         ul 
           each ltri, tri in tris
             li 
-              a.btn-link-scckie.text-light(href="/" + NavLinks[LANG]["cook"] + year + "/" + tri)
+              a.btn-link-scckie.text-light(href=HOST+"/" + NavLinks[LANG]["cook"] + year + "/" + tri)
                 h6 !{ltri}
   else if LANG=="en"
     h1.text-center All of Science Cookies' Cookies
@@ -42,6 +42,6 @@ block content
         ul 
           each ltri, tri in tris
             li 
-              a.btn-link-scckie.text-light(href="/" + NavLinks[LANG]["cook"] + year + "/" + tri)
+              a.btn-link-scckie.text-light(href=HOST+"/" + NavLinks[LANG]["cook"] + year + "/" + tri)
                 h6 !{ltri}
 
