--- a/src/content/viewProf.pug
+++ b/src/content/viewProf.pug
@@ -43,4 +43,4 @@ block content
       ul#cntLike.list-group.list-group-flush
 
 block ownjs
-  script(src='/js/viewProf.js')
+  script(src=HOST+'/js/viewProf.js')
