--- a/functions/views/layouts/config.pug
+++ b/functions/views/layouts/config.pug
@@ -83,7 +83,7 @@
             "viewProf": "view-profile/",
             "drafts": "drafts/",
             "draftsCal": "calendarios/",
-            "edit": "editar/",
-            "editCal": "editar-calendario/"
+            "edit": "edit/",
+            "editCal": "edit-calendar/"
         }
     }
