--- a/src/content/contact.pug
+++ b/src/content/contact.pug
@@ -83,4 +83,4 @@ block content
             button.btn.btn-outline-success.px-4.px-sm-5.px-md-3.px-lg-5(type='submit') Enviar
 
 block ownjs
-  script(src=HOST+'/js/contact.js')
+  script(src='/js/contact.js')
