--- a/src/content/draftsCal.pug
+++ b/src/content/draftsCal.pug
@@ -33,4 +33,4 @@ block content
           span(aria-hidden='true') »
 
 block ownjs
-  script(src=HOST+'/js/draftsCal.js')
+  script(src='/js/draftsCal.js')
