--- a/src/content/index.pug
+++ b/src/content/index.pug
@@ -84,4 +84,4 @@ block content
           span(aria-hidden='true') »
 
 block ownjs
-  script(src=HOST+'/js/index.js')
+  script(src='/js/index.js')
