--- a/src/content/profile.pug
+++ b/src/content/profile.pug
@@ -192,4 +192,4 @@ block content
                   button#btnCnfPref.btn.btn-success Save changes
 
 block ownjs
-  script(src=HOST+'/js/profile.js')
+  script(src='/js/profile.js')
