--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -56,6 +56,22 @@ strong {
   color: rebeccapurple;
   text-decoration: none;
 }
+#changeLang {
+  margin: auto 14px auto 5px;
+  display: inline-block;
+  font-weight: 200;
+  color: #f8f9fa;
+  text-align: center;
+  vertical-align: middle;
+  background-color: transparent;
+  padding: auto 0.75rem;
+  font-size: .8rem;
+}
+@media (max-width: 991px) {
+  .w-nsm-100 {
+    width: 100%;
+  }
+}
 
 h1 {
   font-size: 2.5rem;
